--- a/Document.tex
+++ b/Document.tex
@@ -37,7 +37,7 @@
 \maketitle
 
 \section{作业内容}
-我们需要在gym Atari环境中实现DQN算法及其变体。本实验的实验环境是Atari Game Pong，Agent需要操控球拍与系统互相击球，未接到球则对方计一分，先取得21分者获胜。实验目标是训练DQN及其变体作为Agent获得游戏胜利，并使获胜时的分差尽可能大。在本次实验中，我分别实现和训练了DQN\cite{ref1}\cite{2}、Double DQN\cite{ref3}以及Dueling DQN\cite{ref4}，并评估了它们在训练过程中的表现和它们在上述游戏中的性能。同时我也实现了Prioritized Replay Buffer\cite{ref6}，但是完整的算法受限于我的硬件性能无法运行，因此我对论文中的算法进行了一定的简化，并且评估了简化后的算法对DQN训练过程的影响。
+我们需要在gym Atari环境中实现DQN算法及其变体。本实验的实验环境是Atari Game Pong，Agent需要操控球拍与系统互相击球，未接到球则对方计一分，先取得21分者获胜。实验目标是训练DQN及其变体作为Agent获得游戏胜利，并使获胜时的分差尽可能大。在本次实验中，我分别实现和训练了DQN\cite{ref1}\cite{ref2}、Double DQN\cite{ref3}以及Dueling DQN\cite{ref4}，并评估了它们在训练过程中的表现和它们在上述游戏中的性能。
 
 \section{实现过程}
 \subsection{算法描述}
